hphp/hack/test/typecheck/shape/shape_field_check/shape_idx_with_default_argument.php.exp
File "shape_idx_with_default_argument.php", line 13, characters 5-28:
You are calling Shapes::idx() on a field known to not exist (Typing[4251])
File "shape_idx_with_default_argument.php", line 12, characters 24-39:
The field 'xy' is not defined in this shape
